--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -56,6 +56,18 @@
                 android:text="Posted:"
                 />
 
+            <TextView
+                android:id="@+id/Author"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:paddingLeft="20dp"
+                android:layout_marginRight="10dp"
+                android:paddingBottom="15dp"
+                android:textColor="@color/black"
+                android:textSize="18dp"
+                android:text="Author:"
+                />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
