--- a/app/src/main/res/layout/activity_login_user.xml
+++ b/app/src/main/res/layout/activity_login_user.xml
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="105dp"
-                android:backgroundTint="#FFF5F5"
+                android:backgroundTint="#FFF"
                 android:padding="10dp"
                 app:cardCornerRadius="5dp"
                 app:cardElevation="35dp">
@@ -122,7 +122,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="50dp"
                         android:layout_gravity="center"
-                        android:layout_margin="20dp"
+                        android:layout_margin="25dp"
+                        android:backgroundTint="#ff8A80"
                         android:text="Login"
                         android:textSize="20sp" />
 
