--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,14 +22,13 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="165dp"
+                android:layout_height="175dp"
                 android:gravity="left"
                 android:orientation="horizontal"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp">
 
                 <androidx.cardview.widget.CardView
-
                     android:id="@+id/Add_card"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -47,6 +46,11 @@
                         android:gravity="left"
                         android:orientation="vertical">
 
+                        <FrameLayout
+                            android:layout_width="fill_parent"
+                            android:layout_height="8dp"
+                            android:background="@color/aris" />
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -59,7 +63,7 @@
                                 android:layout_gravity="center"
                                 android:layout_marginLeft="5dp"
                                 android:layout_marginTop="20dp"
-                                android:text="Gender Count"
+                                android:text="Exposures by Gender"
                                 android:textColor="@color/black"
                                 android:textSize="20sp"
                                 android:textStyle="bold" />
@@ -71,7 +75,7 @@
                                 android:layout_marginLeft="65dp"
                                 android:layout_marginTop="10dp"
                                 android:text="Male"
-                                android:textColor="@color/purple_200"
+                                android:textColor="@color/black"
                                 android:textSize="20sp"
                                 android:textStyle="bold" />
 
@@ -92,7 +96,7 @@
                                 android:layout_marginTop="-77dp"
                                 android:layout_marginRight="53dp"
                                 android:text="Female"
-                                android:textColor="@color/purple_200"
+                                android:textColor="@color/black"
                                 android:textSize="20sp"
                                 android:textStyle="bold" />
 
@@ -127,7 +131,7 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/Export_card"
-                android:layout_width="168dp"
+                android:layout_width="175dp"
                 android:layout_height="166dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="245dp"
@@ -136,6 +140,11 @@
                 android:foreground="?android:attr/selectableItemBackground"
                 app:cardBackgroundColor="#FFFFFF"
                 app:cardCornerRadius="8dp">
+
+                <FrameLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="8dp"
+                    android:background="@color/aris" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -146,8 +155,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:text="Announcement"
+                        android:layout_marginTop=".30dp"
+                        android:text="Announcements"
                         android:textAlignment="center"
                         android:textColor="@color/black"
                         android:textSize="20dp"
@@ -170,7 +179,7 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/barcard"
-                android:layout_width="168dp"
+                android:layout_width="175dp"
                 android:layout_height="166dp"
                 android:layout_gravity="right"
                 android:layout_marginTop="-167dp"
@@ -180,6 +189,11 @@
                 android:foreground="?android:attr/selectableItemBackground"
                 app:cardBackgroundColor="#FFFFFF"
                 app:cardCornerRadius="8dp">
+
+                <FrameLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="8dp"
+                    android:background="@color/aris" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -214,7 +228,7 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="224dp"
+                android:layout_height="240dp"
                 android:layout_gravity="left"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="-413dp"
@@ -224,13 +238,18 @@
                 app:cardBackgroundColor="#FFFFFF"
                 app:cardCornerRadius="8dp">
 
+                <FrameLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="8dp"
+                    android:background="@color/aris" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="-85dp"
-                    android:text="Category Count"
+                    android:text="Exposures by Category"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold" />
@@ -242,7 +261,7 @@
                     android:layout_marginLeft="60dp"
                     android:layout_marginTop="48dp"
                     android:text="Cat. 1"
-                    android:textColor="@color/purple_200"
+                    android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -263,7 +282,7 @@
                     android:layout_marginTop="48dp"
                     android:layout_marginRight="55dp"
                     android:text="Cat. 2"
-                    android:textColor="@color/purple_200"
+                    android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -284,7 +303,7 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="30dp"
                     android:text="Cat. 3"
-                    android:textColor="@color/purple_200"
+                    android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -298,11 +317,45 @@
                     android:textColor="@color/black"
                     android:textSize="40dp"
                     android:textStyle="bold" />
+            </androidx.cardview.widget.CardView>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="173dp"
+                android:orientation="vertical">
+            </LinearLayout>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:layout_gravity="left"
+                android:layout_margin="10dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:clickable="true"
+                android:elevation="15dp"
+                android:focusable="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                app:cardBackgroundColor="#FFFFFF"
+                app:cardCornerRadius="8dp">
+
+                <FrameLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="8dp"
+                    android:background="@color/aris" />
+
+                <ImageView
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_gravity="center_horizontal"
+                    android:padding="10dp"
+                    app:srcCompat="@drawable/logo"
+                    tools:ignore="VectorDrawableCompat" />
 
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
-
     </ScrollView>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
