--- a/app/src/main/res/layout/activity_my_pets.xml
+++ b/app/src/main/res/layout/activity_my_pets.xml
@@ -50,7 +50,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="18dp"
         android:layout_marginBottom="100dp"
-        android:backgroundTint="#FF8A8A"
+        android:backgroundTint="#FF808A"
         android:contentDescription="TODO"
         android:src="@drawable/ic_baseline_add_24"
         app:layout_constraintBottom_toBottomOf="parent"
