--- a/app/src/main/res/layout/activity_pet_profile.xml
+++ b/app/src/main/res/layout/activity_pet_profile.xml
@@ -22,7 +22,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:clipToPadding="false"
                 android:gravity="center"
                 android:orientation="horizontal">
@@ -56,82 +56,84 @@
                             android:id="@+id/textViewName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
                             android:layout_marginTop="10dp"
-                            android:textSize="20sp"
                             android:text="Name:"
                             android:textColor="@color/black"
+                            android:textSize="20sp"
                             android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/textViewBreed"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
                             android:layout_marginTop="10dp"
-                            android:textSize="20sp"
                             android:text="Breed:"
                             android:textColor="@color/black"
+                            android:textSize="20sp"
                             android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/textViewColor"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
                             android:layout_marginTop="10dp"
-                            android:textSize="20sp"
                             android:text="Color:"
                             android:textColor="@color/black"
+                            android:textSize="20sp"
                             android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/textViewAge"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
                             android:layout_marginTop="10dp"
-                            android:textSize="20sp"
                             android:text="Age:"
                             android:textColor="@color/black"
+                            android:textSize="20sp"
                             android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/textViewType"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
                             android:layout_marginTop="10dp"
-                            android:textSize="20sp"
                             android:text="Type:"
                             android:textColor="@color/black"
+                            android:textSize="20sp"
                             android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/date_registered"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
                             android:layout_marginTop="10dp"
-                            android:textSize="20sp"
                             android:text="Date Registered:"
                             android:textColor="@color/black"
+                            android:textSize="20sp"
                             android:textStyle="bold" />
+
                         <TextView
                             android:id="@+id/textViewVaccine"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
                             android:layout_marginTop="10dp"
-                            android:textSize="20sp"
+                            android:layout_marginBottom="25dp"
                             android:text="Vaccine Status:"
                             android:textColor="@color/black"
+                            android:textSize="20sp"
                             android:textStyle="bold" />
 
-                        <Button
-                            android:id="@+id/btn_deletePet"
-                            android:layout_width="wrap_content"
+                        <LinearLayout
+                            android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-
-                            android:elevation="4dp"
-                            android:paddingLeft="70dp"
-                            android:paddingRight="70dp"
-                            android:text="Delete"
-                            android:textColor="#fff" />
+                            android:layout_marginBottom="15dp">
 
                         <Button
                             android:id="@+id/btn_editPet"
@@ -140,11 +142,28 @@
                             android:layout_gravity="center_horizontal"
 
                             android:elevation="4dp"
-                            android:paddingLeft="70dp"
-                            android:paddingRight="70dp"
+                            android:paddingLeft="50dp"
+                            android:paddingRight="50dp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginRight="10dp"
                             android:text="Edit Pet"
-                            android:textColor="#fff" />
+                            android:textColor="#fff"
+                            />
 
+                        <Button
+                            android:id="@+id/btn_deletePet"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+
+                            android:elevation="4dp"
+                            android:paddingLeft="50dp"
+                            android:paddingRight="50dp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginRight="10dp"
+                            android:text="Delete"
+                            android:textColor="#fff" />
+                </LinearLayout>
                     </LinearLayout>
 
                 </androidx.cardview.widget.CardView>
