--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -106,37 +106,49 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="-20dp">
-                <!-- Text Label -->
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent">
                 <TextView
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dip"
+                    android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
-                    android:text="Sex:"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="25dp"
+
+                    android:text="Gender:"
                     android:textSize="20sp" />
 
                 <!-- Spinner Element -->
                 <Spinner
                     android:id="@+id/sex"
-                    android:layout_width="200dp"
-                    android:layout_height="50dp"
+                    android:layout_width="250dp"
+                    android:layout_height="48dp"
+                    android:layout_marginLeft="10dp"
                     android:entries="@array/sex" />
-
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent">
 
                 <TextView
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dip"
-                    android:layout_marginBottom="5dp"
+                    android:layout_margin="5dp"
                     android:text="Barangay:"
                     android:textSize="20sp" />
 
                 <!-- Spinner Element -->
                 <Spinner
                     android:id="@+id/barangay"
-                    android:layout_width="200dp"
-                    android:layout_height="50dp"
+                    android:layout_width="250dp"
+                    android:layout_height="48dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="10dp"
                     android:entries="@array/barangay" />
+                </LinearLayout>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -201,21 +213,21 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/passError"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginTop="5dp"
                 app:passwordToggleEnabled="true">
 
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:minHeight="48dp"
-                android:paddingStart="5dp"
-                android:singleLine="true" />
+                <EditText
+                    android:id="@+id/password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:minHeight="48dp"
+                    android:paddingStart="5dp"
+                    android:singleLine="true" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -243,7 +255,7 @@
                 android:id="@+id/terms"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginLeft="15dp"
 
                 android:text="By Signing up, You agree on ARIS Terms and Conditions"
