--- a/app/src/main/res/layout/activity_set_appointment.xml
+++ b/app/src/main/res/layout/activity_set_appointment.xml
@@ -75,7 +75,7 @@
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="-7dp"
                     android:text="Facilities:"
-                    android:textSize="22dp"
+                    android:textSize="25dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -104,7 +104,7 @@
 
             <EditText
                 android:id="@+id/in_date"
-                android:layout_width="190dp"
+                android:layout_width="230dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="260dp" />
@@ -113,18 +113,19 @@
                 android:id="@+id/btn_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:layout_alignBottom="@+id/in_date"
+                android:layout_marginLeft="10dp"
                 android:layout_toEndOf="@+id/in_date"
                 android:layout_toRightOf="@+id/in_date"
                 android:onClick="setDate"
-                android:text="SELECT DATE" />
+                android:text="Select Date"
+                 />
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/linear_layout"
                 android:layout_width="match_parent"
-                android:layout_height="80dp"
+                android:layout_height="70dp"
                 android:layout_marginTop="170dp"
                 android:orientation="vertical"
                 android:padding="10dip">
@@ -157,7 +158,7 @@
 
             <EditText
                 android:id="@+id/Purpose"
-                android:layout_width="335dp"
+                android:layout_width="fill_parent"
                 android:layout_height="60dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="330dp"
