--- a/app/src/main/res/layout/bite_layout.xml
+++ b/app/src/main/res/layout/bite_layout.xml
@@ -9,6 +9,11 @@
     app:cardCornerRadius="12dp"
     android:id="@+id/bite_card">
 
+<FrameLayout
+    android:layout_width="fill_parent"
+    android:layout_height="8dp"
+    android:background="@color/aris"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
