--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -13,6 +13,11 @@
         android:focusable="true"
         android:backgroundTint="@color/white">
 
+        <FrameLayout
+            android:layout_width="fill_parent"
+            android:layout_height="8dp"
+            android:background="@color/aris"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
