--- a/app/src/main/res/layout/pet_activity_detail.xml
+++ b/app/src/main/res/layout/pet_activity_detail.xml
@@ -18,7 +18,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="15dp"
         android:src="@drawable/ic_profile"
-        app:civ_border_color="#F41A1A"
+        app:civ_border_color="#FF8A80"
         app:civ_border_width="4dp" />
 
         <TextView
@@ -101,7 +101,7 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginBottom="15dp"
-        android:background="#2a7ee6"
+        android:backgroundTint="@color/aris"
         android:layout_gravity="bottom|center"
         android:text="Vaccine Status"
         android:textColor="@android:color/white"
