--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,7 +13,6 @@
         <item name="android:statusBarColor" tools:targetApi="l">#FFFFFF</item>
         <!-- Customize your theme here. -->
 
-
     </style>
     <style name="TextAppearance.Material3.ActionBar.Title" parent="@android:style/TextAppearance">
         <item name="android:textSize">25dp</item>
@@ -30,6 +29,12 @@
         <!-- background Color. -->
         <item name="android:background">#fff</item>
         <item name="cornerRadius">35dp</item>
+    </style>
+
+    <style name="policyText" parent="@style/Widget.AppCompat.TextView">
+    <item name="android:textColor">@color/black</item>
+    <item name="android:textSize">18dp</item>
+    <item name="android:layout_margin">8dp</item>
     </style>
 
 </resources>
