--- a/app/src/main/res/layout/activity_login_user.xml
+++ b/app/src/main/res/layout/activity_login_user.xml
@@ -9,152 +9,143 @@
     android:padding="16dp"
     tools:context=".Authentication.LogInFragment">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_gravity="center"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="82dp">
 
-        <ScrollView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="45dp"
+            android:backgroundTint="#FFFFFF"
+            android:padding="10dp"
+            app:cardCornerRadius="15dp">
 
-            <androidx.cardview.widget.CardView
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="105dp"
-                android:backgroundTint="#FFF"
-                android:padding="10dp"
-                app:cardCornerRadius="5dp"
-                app:cardElevation="35dp">
+                android:layout_height="match_parent">
 
-                <LinearLayout
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="5dp"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/image_view_detail"
+                    android:layout_width="230dp"
+                    android:layout_height="180dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/logo"
+                    app:civ_border_color="#00F41A1A"
+                    app:civ_border_width="0dp" />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/emailError"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp">
+
+                    <EditText
+                        android:id="@+id/email"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:backgroundTint="#FF0000"
+                        android:hint="Email"
+                        android:inputType="textEmailAddress"
+                        android:maxLines="1"
+                        android:paddingStart="5dp"
+                        android:singleLine="true" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/passError"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    app:passwordToggleEnabled="true">
+
+                    <EditText
+                        android:id="@+id/password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginTop="10dp"
+                        android:hint="Password"
+                        android:inputType="textPassword"
+                        android:maxLines="1"
+                        android:paddingStart="5dp"
+                        android:singleLine="true" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <CheckBox
+                    android:id="@+id/terms"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:layout_marginStart="10dp"
+                    android:text="Remember Me"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/forgot_pass"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@+id/password"
+                    android:layout_marginLeft="160dp"
+                    android:layout_marginTop="-36dp"
+                    android:layout_marginRight="10dp"
+                    android:clickable="true"
+                    android:onClick="FragmentSignUp"
+                    android:text="Forgot password?"
+                    android:textColor="@android:color/holo_blue_light"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:id="@+id/btn_login"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="5dp"
-                    android:orientation="vertical">
+                    android:layout_margin="15dp"
+                    android:backgroundTint="#ff8A80"
+                    android:paddingTop="2dp"
+                    android:text="Login"
+                    android:textSize="20sp" />
 
-                    <ImageView
-                        android:id="@+id/image_view_detail"
-                        android:layout_width="230dp"
-                        android:layout_height="180dp"
-                        android:layout_gravity="center"
-                        android:src="@drawable/logo"
-                        app:civ_border_color="#00F41A1A"
-                        app:civ_border_width="0dp" />
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/btn_register"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="38dp"
+                    android:layout_marginTop="-10dp"
+                    android:text="Don't have an Account?"
+                    android:textColor="#000000" />
 
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/emailError"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:paddingLeft="10dp"
-                        android:paddingRight="10dp">
-
-                        <EditText
-                            android:id="@+id/email"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:backgroundTint="#FF0000"
-                            android:hint="Email"
-                            android:inputType="textEmailAddress"
-                            android:maxLines="1"
-                            android:paddingStart="5dp"
-                            android:singleLine="true" />
-
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/passError"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:paddingLeft="10dp"
-                        android:paddingRight="10dp"
-                        app:passwordToggleEnabled="true">
-
-                        <EditText
-                            android:id="@+id/password"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_centerHorizontal="true"
-                            android:layout_centerVertical="true"
-                            android:layout_marginTop="10dp"
-                            android:hint="Password"
-                            android:inputType="textPassword"
-                            android:maxLines="1"
-                            android:paddingStart="5dp"
-                            android:singleLine="true" />
-
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <CheckBox
-                        android:id="@+id/terms"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-
-                        android:layout_marginStart="10dp"
-                        android:text="Remember Me"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/forgot_pass"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_above="@+id/password"
-                        android:layout_marginLeft="160dp"
-                        android:layout_marginTop="-36dp"
-                        android:layout_marginRight="10dp"
-                        android:clickable="true"
-                        android:onClick="FragmentSignUp"
-                        android:text="Forgot password?"
-                        android:textColor="@android:color/holo_blue_light"
-                        android:textStyle="bold" />
-
-                    <Button
-                        android:id="@+id/btn_login"
-                        android:layout_width="wrap_content"
-                        android:layout_height="50dp"
-                        android:layout_gravity="center"
-                        android:layout_margin="25dp"
-                        android:backgroundTint="#ff8A80"
-                        android:text="Login"
-                        android:textSize="20sp" />
-
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/btn_register"
-                        android:layout_alignParentStart="true"
-                        android:layout_marginStart="38dp"
-                        android:layout_marginTop="-10dp"
-                        android:text="Don't have an Account?"
-                        android:textColor="#000000" />
-
-                    <TextView
-                        android:id="@+id/txtSign_up_link"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_above="@+id/btn_register"
-                        android:layout_marginStart="188dp"
-                        android:layout_marginTop="-20dp"
-                        android:clickable="true"
-                        android:onClick="FragmentSignUp"
-                        android:text="Sign Up"
-                        android:textColor="@android:color/holo_blue_light"
-                        android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/txtSign_up_link"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@+id/btn_register"
+                    android:layout_marginStart="188dp"
+                    android:layout_marginTop="-20dp"
+                    android:clickable="true"
+                    android:onClick="FragmentSignUp"
+                    android:text="Sign Up"
+                    android:textColor="@android:color/holo_blue_light"
+                    android:textStyle="bold" />
 
 
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-        </ScrollView>
-    </RelativeLayout>
+            </LinearLayout>
+            </ScrollView>
+        </androidx.cardview.widget.CardView>
 
 
 
