--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -327,6 +327,7 @@
             </LinearLayout>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/about_card"
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
                 android:layout_gravity="left"
