--- a/app/src/main/res/layout/activity_bite_case_file.xml
+++ b/app/src/main/res/layout/activity_bite_case_file.xml
@@ -171,10 +171,22 @@
                             android:layout_gravity="center_vertical|center_horizontal"
                             android:text="Send Health Report" />
 
+
+                        <Button
+                            android:id="@+id/usvaxx"
+                            android:layout_width="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="15dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="right"
+                            android:backgroundTint="@color/aris"
+                            android:text="User Vaccination Details" />
+
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/r_health_report"
                             android:layout_width="match_parent"
-                            android:layout_height="240dp"
+                            android:layout_height="wrap_content"
                             tools:listitem="@layout/healt_card"/>
 
                     </LinearLayout>
