--- a/app/src/main/res/layout/activity_edit_vaxx.xml
+++ b/app/src/main/res/layout/activity_edit_vaxx.xml
@@ -10,7 +10,6 @@
     android:layout_gravity="center">
 
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,7 +18,7 @@
         android:orientation="vertical">
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/back"
+            android:id="@+id/backk"
             android:layout_width="55dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
